# livia2

./: README.md  livia.py  pyproject.toml  requirements.txt
agent/: __init__.py  config.py  creator.py  guardrails.py  mcp_processor.py  mcp_streaming.py  processor.py
server/: config.py  context_manager.py  event_handlers.py  message_processor.py  slack_server.py  streaming_processor.py  utils.py
tools/: __init__.py  document_processor.py  image_generation.py  thinking_agent.py  web_search.py
tools/mcp/: cache_manager.py  zapier_mcps.py
